                                 version vX.Y.Z.

When vX.Y.Z is later released, the same NEWS-worthy item will also be
included in the vX.Y.Z section and be denoted as:

   (** also appeared: A.B.C)  -- indicating that this item was previously
                                 included in release version vA.B.C.

Trunk (not on release branches yet)
-----------------------------------

- Adding a new parallel I/O component and multiple new frameworks to 
  support parallel I/O operations.
- ErrMgr framework redesigned to better support fault tolerance development
  activities. See the following RFC for details:
  http://www.open-mpi.org/community/lists/devel/2010/03/7589.php
- Added database framework to ORTE and changed all modex operations
  to flow thru it, also included additional system info in the
  available data
- Added staged state machine to support sequential work flows
- Added distributed file system support for accessing files across
  nodes that do not have networked file systems
- Extended filem framework to support scalable pre-positioning of
  files for use by applications, adding new "raw" component that
  transmits files across the daemon network


1.7
---

- Added MPI-3 functionality: 
  - MPI_GET_LIBRARY_VERSION
  - Matched probe
  - MPI_TYPE_CREATE_HINDEXED_BLOCK
  - Non-blocking collectives
  - MPI_INFO_ENV support
- Enabled compile-time warning of deprecated MPI functions by default
  (in supported compilers).
- Revamped Fortran MPI bindings (see the README for details):
  - mpifort wrapper compiler
  - "use mpi_f08" bindings (for compilers that support it)
  - Better "use mpi" support (for compilers that support it)
  - Removed incorrect MPI_SCATTERV interface from "mpi" module that was
    added in the 1.5.x series for ABI reasons.
- Modified paffinity system to provide warning when bindings result in
  being "bound to all", which is equivalent to "not bound"
- Removed maffinity, paffinity, and carto frameworks (and associated