@@ -54,6 +54,8 @@ included in the vX.Y.Z section and be denoted as:
 Trunk (not on release branches yet)
 -----------------------------------
 
+- Do not build the MPI C++ bindings by default.  They must be enabled
+  via --enable-mpi-cxx.
 - Adding a new parallel I/O component and multiple new frameworks to 
   support parallel I/O operations.
 - ErrMgr framework redesigned to better support fault tolerance development
